k8s-manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp
  namespace: outline
  labels:
    app: myapp
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: myapp
